---
source: crates/rargs/tests/test_scripts.rs
description: "[stderr] commands-nested.sh "
expression: "String::from_utf8(match \"stderr\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
[31mMissing command. Select one of [33mdir, file[31m[0m

Sample application with nested commands

[4mUsage:[0m
  commands-nested [OPTIONS] [COMMAND] [COMMAND_OPTIONS]
  commands-nested -h|--help
  commands-nested -v|--version

[4mExamples:[0m
  commands-nested dir
    Directory command
  commands-nested dir -h
    Directory help command
  commands-nested file -h
    Directory file command
  commands-nested dir list
    List directory sub-command
  commands-nested dir list -h
    List directory sub-command help

[4mCommands:[0m
  dir ..... Directory commands
  file .... File commands

[4mOptions:[0m
  -h --help
    Print help
  -v --version
    Print version

